// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<div
  class="Dropdown"
  data-test-id="cf-ui-dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="Button Button--primary Button--medium"
    data-test-id="cf-ui-button"
    type="button"
  >
    <span
      class="Button__inner-wrapper emotion-0"
      tabindex="-1"
    >
      <span
        class="Button__label"
      >
        Toggle
      </span>
    </span>
  </button>
</div>
`;

exports[`renders the component as open 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<div
  class="Dropdown"
  data-test-id="cf-ui-dropdown"
>
  <button
    aria-expanded="true"
    aria-haspopup="menu"
    class="Button Button--primary Button--medium"
    data-test-id="cf-ui-button"
    type="button"
  >
    <span
      class="Button__inner-wrapper emotion-0"
      tabindex="-1"
    >
      <span
        class="Button__label"
      >
        Toggle
      </span>
    </span>
  </button>
</div>
`;

exports[`renders the component with a submenu 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<div
  class="Dropdown"
  data-test-id="cf-ui-dropdown"
>
  <button
    aria-expanded="true"
    aria-haspopup="menu"
    class="Button Button--primary Button--medium"
    data-test-id="cf-ui-button"
    type="button"
  >
    <span
      class="Button__inner-wrapper emotion-0"
      tabindex="-1"
    >
      <span
        class="Button__label"
      >
        Toggle
      </span>
    </span>
  </button>
</div>
`;

exports[`renders the component with an additional class name 1`] = `
.emotion-0 {
  display: inherit;
  outline: 0;
}

<div
  class="Dropdown"
  data-test-id="cf-ui-dropdown"
>
  <button
    aria-expanded="false"
    aria-haspopup="menu"
    class="Button Button--primary Button--medium"
    data-test-id="cf-ui-button"
    type="button"
  >
    <span
      class="Button__inner-wrapper emotion-0"
      tabindex="-1"
    >
      <span
        class="Button__label"
      >
        Toggle
      </span>
    </span>
  </button>
</div>
`;
